# HatchitCore

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
include/: ht_bitfield.h  ht_debug.h  ht_file.h  ht_file_exception.h  ht_file_interface.h  ht_guid.h  ht_hash.h  ht_ini_exception.h  ht_inireader.h  ht_inisettings.h  ht_iniwriter.h  ht_jsonhelper.h  ht_noncopy.h  ht_os.h  ht_path_singleton.h  ht_platform.h  ht_profiler.h  ht_refcounted.h  ht_refcounted_resourcemanager.h  ht_scheduler.h  ht_scopedthread.h  ht_singleton.h  ht_string.h  ht_threadqueue.h  ht_threadstack.h  ht_threadvector.h  ht_timer.h  ht_types.h  ht_version.h  ht_version.h.in
include/linux/: ht_linuxtimer.h  ht_timer.h
include/native/windows/: ht_windowstimer.h
include/unused/: ht_file.h  ht_guid.h  ht_ini_exception.h  ht_inisettings.h  ht_path_singleton.h  ht_profiler.h  ht_threadqueue.h
include/windows/: ht_scheduler.h  ht_timer.h  ht_windowstimer.h
include/winrt/: ht_winrt_filesystem.h
source/: ht_debug.cpp  ht_file.cpp  ht_file_exception.cpp  ht_guid.cpp  ht_hash.cpp  ht_ini_exception.cpp  ht_inireader.cpp  ht_inisettings.cpp  ht_iniwriter.cpp  ht_noncopy.cpp  ht_os.cpp  ht_path_singleton.cpp  ht_profiler.cpp  ht_refcounted.cpp  ht_refcounted_resourcemanager.cpp  ht_scheduler.cpp  ht_scopedthread.cpp  ht_string.cpp
source/inline/: ht_bitfield.inl  ht_debug.inl  ht_guid.inl  ht_handle.inl  ht_inisettings.inl  ht_jsonhelper.inl  ht_noncopy.inl  ht_refcounted.inl  ht_refcounted_resourcemanager.inl  ht_scheduler.inl  ht_singleton.inl  ht_threadqueue.inl  ht_threadstack.inl  ht_threadvector.inl
source/inline/unused/: ht_handle.inl
source/linux/: ht_linuxtimer.cpp  ht_timer.cpp
source/unused/: ht_file.cpp  ht_file_exception.cpp  ht_hash.cpp  ht_profiler.cpp  ht_refcounted_resourcemanager.cpp  ht_scheduler.cpp
source/unused/linux/: ht_linuxtimer.cpp
source/windows/: ht_timer.cpp  ht_windowstimer.cpp
source/winrt/: ht_winrt_filesystem.cpp
test/: FormatTest.cpp  INITest.cpp  JsonTest.cpp  OSTest.cpp
